# bullshit-rs

./: Cargo.toml  README.md  data.json
src/: lib.rs
